force-app/main/default/objects/custom_create223__c/custom_create223__c.object-meta.xml
<CustomObject>
    <label>Custom created object223</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects223</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>