force-app/main/default/objects/custom_create223__c/fields/custom_create_223field550__c.field-meta.xml
<CustomField>
    <fullName>custom_create_223field550__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 223field550</label>
    <type>Checkbox</type>
</CustomField>